# autoSQL

./: .gitignore  .gitmodules  README.md
autoSQL/: README.md  pyproject.toml
autoSQL/autosql/: __init__.py  drafting.ipynb  example_pipeline.ipynb
autoSQL/autosql/data/: README.md  __init__.py  data.ipynb  data.py
autoSQL/autosql/data/helpers/: __init__.py  generate.py  upload.py
autoSQL/autosql/eval/: README.md  RESEARCH.md  __init__.py  drafting.ipynb  eval.ipynb  eval.py  test.py
autoSQL/autosql/predict/: README.md  __init__.py  drafting.ipynb  predict.ipynb  predict.py
autoSQL/autosql/predict/helper/: prompts.py
autoSQL/autosql/tuning/: README.md  TUNINGGUIDE.md  __init__.py  drafting.ipynb  server.py  tune.ipynb  tune.py
autoSQL/tests/: auto_sql_test.py  test_sql_data.pkl
